--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CoMovApp</string>
     <string name="title_activity_map_view">mapView</string>
+    <string name="mostrar_informacion">Mostrar información</string>
+    <string name="bienvenido">¡Bienvenido!</string>
+    <string name="mostrar_mapa">Mostrar mapa</string>
 </resources>
