--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">CoMovApp</string>
     <string name="title_activity_map_view">mapView</string>
-    <string name="mostrar_informacion">Mostrar información</string>
+    <string name="mostrar_informacion2">Mostrar información</string>
     <string name="bienvenido">¡Bienvenido!</string>
     <string name="mostrar_mapa">Mostrar mapa</string>
 </resources>
